# NeuroScan-AI

./: .gitignore  README.md  final_test.py  main.py  pyproject.toml  requirements.txt  train_model.py
api/: index.py  requirements.txt
dataset/: download_dataset.ipynb  download_dataset.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ResultSection.jsx  UI.jsx  UploadSection.jsx
model/: model_building.ipynb  model_building.py
static/css/: style.css
templates/: base.html  index.html  result.html
